= 1.7.30 = * Added Inventor iLogic as a language * Added cellspacing and cellpadding back into table due to spacing issue after trying to conform to W3C standards... * Improved default language constants * Added missing language samples for live preview (ruby, monkey and ilogic) * More prominent "show language" button
git-svn-id: https://plugins.svn.wordpress.org/crayon-syntax-highlighter/trunk@503049 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin_style.css
+++ b/css/admin_style.css
@@ -126,8 +126,12 @@
 	border: 0;
 }
 
-#lang-info {
+/*#lang-info {
 	display: none;
+}*/
+
+#lang-info div {
+	padding: 5px 0px;
 }
 
 .crayon-table .not-parsed {
